# op

./: .gitignore  CMakeLists.txt
libop/: CMakeLists.txt  libop.cpp  libop.h  libopEx.cpp  libopEx.h
libop/background/display/: opDXGI.cpp  opDXGI.h
libop/background/mouse/: opMouseWin.cpp
libop/imageProc/: ImageLoc.cpp  ImageLoc.h  ImageProc.cpp  ImageProc.h  OcrWrapper.cpp  OcrWrapper.h  tess_ocr.cpp
libop/include/: Image.hpp
